--- a/src/app/articles/25-formas-producirse-embarazo/formas-embarazo.component.html
+++ b/src/app/articles/25-formas-producirse-embarazo/formas-embarazo.component.html
@@ -4,3 +4,7 @@
     bg_color="{{content.bgColor}}" 
     [content]="content">
 </app-article>
+
+<button (click)="play()">Play</button>
+<button (click)="pause()">Pause</button>
+<button (click)="stop()">Stop</button>
