agregue la traduccion de la primera parte

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,9 @@
               <img src="/assets/logo.png" width="150px">
             </a>
           </div>
+          
           <div class="col d-flex align-items-center justify-content-end">
+            <app-traductor></app-traductor>
             
             <a [routerLink]="['/1doc3']">
             <img class="" src="../assets/icon/preguntas.svg" style="height: 1.5rem">
@@ -22,6 +24,7 @@
           <a href="/servicios-amigables">
             <img class="" src="../assets/icon/SERVICIOS.svg" style="height: 1.5rem">
           </a>
+
           </div>
         </div>
       </nb-layout-column>
