--- a/src/app/components/common/article/article.component.html
+++ b/src/app/components/common/article/article.component.html
@@ -48,6 +48,10 @@
                     <img class="mr-3 my-auto" src="../../../assets/icon/icons8-whatsapp.svg" style="width: 5vw;">
                 </a>
             </div>
+            <ngx-audio-player [playlist]="msaapPlaylist" [displayTitle]="true" [autoPlay]="false"
+            muted="muted" [displayPlaylist]="true" [pageSizeOptions]="msaapPageSizeOptions" (trackEnded)="onEnded($event)"
+                [expanded]="true" [displayVolumeControls]="false" [disablePositionSlider]="false">
+            </ngx-audio-player>  
         </div>
     
     </div>
