--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -131,7 +131,7 @@
 </div>
 <div class="row bg-white text-center py-3">
   <div class="col-12 text-center">
-    <h5>Herramientas para ti</h5>
+    <h5>{{'herramientas' | translate }}</h5>
   </div>
   <div class="col-md-6 col-12 px-2">
     <div class="media py-2 px-3 mb-1" style="background-color: #edf1f7;">
