--- a/src/styles.scss
+++ b/src/styles.scss
@@ -60,3 +60,5 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
      font-size: 40px;
      margin: 20px 0;
  }
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
