Traduccion de home

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -14,10 +14,10 @@
         </div>
       </div>
       <div class="carousel-caption">
-        <h3 class="text-white">Bienvenid@</h3>
-        <p class="text-white">a Mirada Joven</p>
+        <h3 class="text-white">{{'bienvenidx' | translate}}</h3>
+        <p class="text-white">{{'aMiradaJoven' | translate}}</p>
         <a [routerLink]="['/acerca-nosotros']">
-        <button href="" class="btn btn-primary">Leer</button>
+        <button href="" class="btn btn-primary">{{'leer' | translate}}</button>
         </a>
       </div>
     </ng-template>
@@ -57,7 +57,7 @@
         <h3 class="text-white">Covid-19</h3>
         <p class="text-white">Una mirada a la pandemia</p>
         <a  [routerLink]="['/under-construction']">
-          <button href="" class="btn btn-primary">Leer</button>
+          <button href="" class="btn btn-primary">{{'leer' | translate}}</button>
         </a>
       </div>
     </ng-template>
@@ -78,7 +78,7 @@
         <h3 class="text-white"></h3>
         <p class="text-white"></p>
         <a  href="../../../assets/doc/Cuaderno_yo_decido_digital.pdf" download>
-          <button href="" class="btn btn-primary">Leer</button>
+          <button href="" class="btn btn-primary">{{'leer' | translate}}</button>
         </a>
       </div>
     </ng-template>
@@ -137,11 +137,11 @@
     <div class="media py-2 px-3 mb-1" style="background-color: #edf1f7;">
       <img class="mr-3 my-auto" src="../../../assets/icon/cualquier-pregunta.svg" style="width: 130px;">
       <div class="media-body">
-        <h6>Cualquier pregunta es válida</h6>
-        <p class="mb-2">Un gran equipo médico  responderá  a tus dudas de forma confidencial y certera.</p>
+        <h6>{{'preguntaValida' | translate}}</h6>
+        <p class="mb-2">{{'granEquipoMedico' | translate}}</p>
         <div class="row">
             <a class="mx-auto" [routerLink]="['/1doc3']">
-            <span class="badge badge-primary py-1 px-3">Preguntar</span>
+            <span class="badge badge-primary py-1 px-3">{{'preguntar' | translate}}</span>
           </a>
         </div>
       </div>
@@ -151,11 +151,11 @@
     <div class="media py-2 px-3 mb-1" style="background-color: #edf1f7;">
       <img class="mr-3 my-auto" src="../../../assets/icon/orientaSex.svg" style="width: 130px;">
       <div class="media-body">
-        <h6>Línea de ayuda OrientaSEX</h6>
-        <p class="mb-2">Infórmate de manera gratuita y confidencial: ¡es la mejor forma de prevenir!</p>
+        <h6>{{'lineaAyuda' | translate}}</h6>
+        <p class="mb-2">{{'informacionGratuita' | translate}}</p>
         <div class="row">
           <a class="mx-auto" href="tel:01800-00-77-200">
-            <span class="badge badge-primary py-1 px-3">Llamar</span>
+            <span class="badge badge-primary py-1 px-3">{{'llamar' | translate}}</span>
           </a>
           <a class="mx-auto" href="https://api.whatsapp.com/send?phone=525579995957">
             <span class="badge badge-primary py-1 px-3">WhatsApp</span>
@@ -168,11 +168,11 @@
     <div class="media py-2 px-3 mb-1" style="background-color: #edf1f7;">
       <img class="mr-3 my-auto" src="../../../assets/icon/planificatel.svg" style="width: 130px;">
       <div class="media-body">
-        <h6>Línea telefónica</h6>
-        <p class="mb-2">Resuelve tus dudas sobre salud sexual y reproductiva.</p>
+        <h6>{{'lineaTelefonica' | translate}}</h6>
+        <p class="mb-2">{{'resolverDudas' | translate}}</p>
         <div class="row">
           <a class="mx-auto" href="tel:800-624-64-64">
-            <span class="badge badge-primary py-1 px-3">Llamar</span>
+            <span class="badge badge-primary py-1 px-3">{{'llamar' | translate}}</span>
           </a>
         </div>
       </div>
@@ -182,11 +182,11 @@
     <div class="media py-2 px-3 mb-1" style="background-color: #edf1f7;">
       <img class="mr-3 my-auto" src="../../../assets/icon/gendes.svg" style="width: 130px;">
       <div class="media-body">
-        <h6>Línea de emergencia para hombres</h6>
-        <p class="mb-2">Si durante este periodo de cuarentena en casa, te sientes enojado, frustrado, molesto, triste o en tensión. Llama a GENDES, disponible las 24 horas.</p>
+        <h6>{{'lineaEmergencia' | translate}}</h6>
+        <p class="mb-2">{{'durantePeriodo' | translate}}</p>
         <div class="row">
           <a class="mx-auto" href="tel:55-52-64-20-11">
-            <span class="badge badge-primary py-1 px-3">Llamar</span>
+            <span class="badge badge-primary py-1 px-3">{{'llamar' | translate}}</span>
           </a>
         </div>
       </div>
@@ -196,11 +196,11 @@
     <div class="media py-2 px-3 mb-1" style="background-color: #edf1f7;">
       <img class="mr-3 my-auto" src="../../../assets/icon/servicios-2.svg" style="width: 130px;">
       <div class="media-body">
-        <h6>Servicios de salud cerca de ti</h6>
-        <p class="mb-2">Encuentra un servicio amigable de salud sexual especializado en jóvenes como tú.</p>
+        <h6>{{'serviciosSalud' | translate}}</h6>
+        <p class="mb-2">{{'encuentraServicio' | translate}}</p>
         <div class="row">
           <a class="mx-auto" [routerLink]="['/servicios-amigables']">
-            <span class="badge badge-primary py-1 px-3">Ubicar</span>
+            <span class="badge badge-primary py-1 px-3">{{'ubicar' | translate}}</span>
           </a>
         </div>
       </div>
@@ -210,11 +210,11 @@
     <div class="media py-2 px-3 mb-1" style="background-color: #edf1f7;">
       <img class="mr-3 my-auto" src="../../../assets/icon/calendario-menstrual.svg" style="width: 130px;">
       <div class="media-body">
-        <h6>Calendario menstrual</h6>
-        <p class="mb-2">Calcula cuales son los días fértiles o de ovulación.</p>
+        <h6>{{'calendarioMenstrual' | translate}}</h6>
+        <p class="mb-2">{{'calcularDiasFertiles' | translate}}</p>
         <div class="row">
           <a class="mx-auto" href="https://flo.health/es">
-            <span class="badge badge-primary py-1 px-3">Calcular</span>
+            <span class="badge badge-primary py-1 px-3">{{'calcular' | translate}}</span>
           </a>
         </div>
       </div>
@@ -224,7 +224,7 @@
 <div class="row bg-white text-center py-3">
   <div class="col">
     <div class="container">
-      <h5 class="card-title">¡Síguenos!</h5>
+      <h5 class="card-title">{{'seguir' | translate}}</h5>
       <div class="row d-flex justify-content-center">
         <div class="col">
             <a href="https://www.facebook.com/MiradaJovenOficial/ ">
@@ -260,9 +260,9 @@
 <div #visitsDiv class="row bg-white text-center py-3">
   <div class="col">
     <app-visit-counter #counter endAt="165000000" interval="10"></app-visit-counter>
-    <h5>¡Somos la mayor generación de jóvenes!</h5>
+    <h5>{{'generacionJovenes' | translate}}</h5>
     <p class="card-text text-muted">
-      Queremos que tu voz sea escuchada y tomada en cuenta. Cuéntanos tus ideas y preocupaciones: juntos podemos propiciar el cambio.
+     {{'escucharTuVoz' | translate}}
     </p>
   </div>
 </div>
@@ -276,8 +276,7 @@
         </picture>
       </div>
       <div class="carousel-caption">
-        <p class="text-white"> En Mirada Joven encontré respuestas a mis dudas
-          sobre sexualidad y me he sentido mucho mejor.</p>
+        <p class="text-white"> {{'palabrasFranciscoGarcia' | translate}}</p>
         <h3 class="text-white">Francisco García</h3>
         <h6 class="text-white">Guadalajara</h6>
       </div>
@@ -289,9 +288,7 @@
         </picture>
       </div>
       <div class="carousel-caption">
-        <p class="text-white">Me gusta que no solamente hablen de sexualidad, 
-          si no que hay contenidos para que los jóvenes podamos ser 
-          agentes de cambio social.  </p>
+        <p class="text-white">{{'palabrasJuanGonzalez' | translate}}  </p>
         <h3 class="text-white">Juan González</h3>
         <h6 class="text-white">CDMX</h6>
       </div>
