--- a/src/app/articles/20-deseo-sexual/deseo-sexual.component.html
+++ b/src/app/articles/20-deseo-sexual/deseo-sexual.component.html
@@ -2,5 +2,6 @@
     [path_routes]="path"
     current_route="¿Qué es el deseo sexual?"
     bg_color="{{content.bgColor}}" 
-    [content]="content">
+    [content]="content"
+    [track] = "track">
 </app-article>
