Audios de Articulos listos

--- a/src/app/articles/24-incomodx/incomodx.component.html
+++ b/src/app/articles/24-incomodx/incomodx.component.html
@@ -2,5 +2,6 @@
     [path_routes]="path"
     current_route="Decir que no"
     bg_color="{{content.bgColor}}" 
-    [content]="content">
+    [content]="content"
+    [track] = "track">
 </app-article>
