--- a/src/app/articles/40-conocer-tu-cuerpo/conocer-tu-cuerpo.component.html
+++ b/src/app/articles/40-conocer-tu-cuerpo/conocer-tu-cuerpo.component.html
@@ -2,5 +2,6 @@
     [path_routes]="path"
     current_route="Conocer tu cuerpo es conocerte a ti mismo"
     bg_color="{{content.bgColor}}" 
-    [content]="content">
+    [content]="content"
+    [track] = "track">
 </app-article>
