--- a/src/app/articles/22-infecciones-transmision-sexual/que-son-infecciones-transmision-sexual.component.html
+++ b/src/app/articles/22-infecciones-transmision-sexual/que-son-infecciones-transmision-sexual.component.html
@@ -2,5 +2,6 @@
     [path_routes]="path"
     current_route="¿Qué son las infecciones de transmisión sexual?"
     bg_color="{{content.bgColor}}" 
-    [content]="content">
+    [content]="content"
+    [track] = "track">
 </app-article>
