--- a/src/app/articles/23-periodo-premenstrual/periodo-premenstrual.component.html
+++ b/src/app/articles/23-periodo-premenstrual/periodo-premenstrual.component.html
@@ -2,5 +2,6 @@
     [path_routes]="path"
     current_route="Periodo premenstrual"
     bg_color="{{content.bgColor}}" 
-    [content]="content">
+    [content]="content"
+    [track] = "track">
 </app-article>
