--- a/src/app/articles/25-formas-producirse-embarazo/formas-embarazo.component.html
+++ b/src/app/articles/25-formas-producirse-embarazo/formas-embarazo.component.html
@@ -2,5 +2,6 @@
     [path_routes]="path"
     current_route="¿De qué formas puede producirse un embarazo?"
     bg_color="{{content.bgColor}}" 
-    [content]="content">
+    [content]="content"
+    [track] = "track">
 </app-article>
