--- a/src/app/articles/34-cambios-durante-ciclo-menstrual/cambios-ciclo-menstrual.component.html
+++ b/src/app/articles/34-cambios-durante-ciclo-menstrual/cambios-ciclo-menstrual.component.html
@@ -2,5 +2,6 @@
     [path_routes]="path"
     current_route="Cambios producidos durante el ciclo menstrual"
     bg_color="{{content.bgColor}}" 
-    [content]="content">
+    [content]="content"
+    [track] = "track">
 </app-article>
