--- a/src/app/articles/47-organos-genitales-femeninos/organos-genitales-femeninos.component.html
+++ b/src/app/articles/47-organos-genitales-femeninos/organos-genitales-femeninos.component.html
@@ -2,5 +2,6 @@
     [path_routes]="path"
     current_route="Organos genitales femeninos"
     bg_color="{{content.bgColor}}" 
-    [content]="content">
+    [content]="content"
+    [track] = "track">
 </app-article>
