--- a/src/app/articles/50-respetar-tu-cuerpo/respetar-tu-cuerpo.component.html
+++ b/src/app/articles/50-respetar-tu-cuerpo/respetar-tu-cuerpo.component.html
@@ -2,5 +2,6 @@
     [path_routes]="path"
     current_route="Respetar tu cuerpo y el de los demás"
     bg_color="{{content.bgColor}}" 
-    [content]="content">
+    [content]="content"
+    [track] = "track">
 </app-article>
