--- a/src/app/components/friendly-services/friendly-services.component.html
+++ b/src/app/components/friendly-services/friendly-services.component.html
@@ -1,15 +1,14 @@
 <div class="row justify-content-center mx-3">
-    <h3>Servicios amigables de Salud Sexual y Reproductiva</h3>
+    <h3>{{'serviciosAmigables' | translate}}</h3>
 </div>
 <div class="row justify-content-center mx-3">
-    <p>¡Acércate, este servicio es para ti!</p>
+    <p>{{'acercateServicio' | translate}}</p>
 </div>
 <div class="row justify-content-center mx-3">
     <p class="text-muted" class="text-justify">
-      ¡Acércate, este servicio es para ti!
-      Un servicio de salud amigable ofrece una serie de servicios preventivos para las y los adolescentes y jóvenes como tú. Cuenta con un paquete básico de servicios como la disponibilidad de anticonceptivos, consejería, servicios de detección de infecciones de transmisión sexual (ITS), incluyendo la detección del VIH y el embarazo.
+      {{'acercateServicioComplemento' | translate}}
      <br>
-      Estos servicios cuentan con accesibilidad en horarios y ubicación en un ambiente de respeto a tus derechos, tus decisiones y tu autonomía.
+      {{'estosServicios' | translate}}
     </p>
 </div>
 <div class="row justify-content-center mx-3">
@@ -50,7 +49,7 @@
       </button>
     </div>
     <div class="modal-body">
-        <p class="text-fs-info">TURNO: {{ infoContent.turn }}</p>
+        <p class="text-fs-info">{{'turno' | translate}} {{ infoContent.turn }}</p>
         <p class="text-fs-info">{{ infoContent.service_days  }}</p>
         <div class="row">
           <div class="col">
@@ -61,14 +60,14 @@
           </div>
         </div>
         <p>{{ infoContent.phone }}</p>
-        <p>A {{ distanceInKmFromPosition | number:'1.2-2'  }} km de tu ubicación</p>
+        <p>A {{ distanceInKmFromPosition | number:'1.2-2'  }} {{'distanciaUbicacion' | translate}}</p>
         <div>
-            <h6>TIPO DE ATENCIÓN</h6>
+            <h6>{{'tipoAtencion' | translate}}</h6>
             <div class="row row-cols-3">
               <div class="col service-col">
                 <div class="card mb-4 service-info-card">
                   <div style="text-align: center;">
-                    <p class="fs-title">ORIENTACIÓN<br>CONSEJERA</p>
+                    <p class="fs-title">{{'orientacion' | translate}}<br>{{'consejera' | translate}}</p>
                     <p class="card-text text-fs-card">{{ infoContent.has_orientation_service?'SÍ':'NO' }}</p>
                   </div>
                 </div>
@@ -76,7 +75,7 @@
               <div class="col service-col">
                 <div class="card mb-4 service-info-card">
                   <div style="text-align: center;">
-                    <p class="fs-title">ATENCIÓN<br>PSICOLOGICA</p>
+                    <p class="fs-title">{{'atencion' | translate}}<br>{{'psicologica' | translate}}</p>
                     <p class="card-text text-fs-card">{{ infoContent.has_psychology_service?'SÍ':'NO' }}</p>
                   </div>
                 </div>
@@ -84,7 +83,7 @@
               <div class="col service-col">
                 <div class="card mb-4 service-info-card">
                   <div style="text-align: center;">
-                    <p class="fs-title">ATENCIÓN<br>MEDICA</p>
+                    <p class="fs-title">{{'atencion' | translate}}<br>{{'medica' | translate}}</p>
                     <p class="card-text text-fs-card">{{ infoContent.has_medic_service?'SÍ':'NO' }}</p>
                   </div>
                 </div>
@@ -92,7 +91,7 @@
               <div class="col service-col">
                 <div class="card mb-4 service-info-card">
                   <div style="text-align: center;">
-                    <p class="fs-title">PLÁTICAS<br>EN SSRA</p>
+                    <p class="fs-title">{{'platicas' | translate}}<br>{{'enSSRA' | translate}}</p>
                     <p class="card-text text-fs-card">{{ infoContent.has_ssra?'SÍ':'NO' }}</p>
                   </div>
                 </div>
@@ -100,7 +99,7 @@
               <div class="col service-col">
                 <div class="card mb-4 service-info-card">
                   <div style="text-align: center;">
-                    <p class="fs-title">TALLERES</p>
+                    <p class="fs-title">{{'talleres' | translate}}</p>
                     <p class="card-text text-fs-card" style="margin-top: 36px;">{{ infoContent.has_workshops?'SÍ':'NO' }}</p>
                   </div>
                 </div>
@@ -108,7 +107,7 @@
               <div class="col service-col">
                 <div class="card mb-4 service-info-card">
                   <div style="text-align: center;">
-                    <p class="fs-title">ENTREGA DE<br>ANTICONCEPTIVOS<p>
+                    <p class="fs-title">{{'entregaDe' | translate}}<br>{{'anticonceptivos' | translate}}<p>
                     <p class="card-text text-fs-card">{{ infoContent.has_contraceptive?'SÍ':'NO' }}</p>
                   </div>
                 </div>
@@ -116,7 +115,7 @@
               <div class="col service-col">
                 <div class="card mb-4 service-info-card">
                   <div style="text-align: center;">
-                    <p class="fs-title">ATENCIÓN DE<br>EMBARAZADAS</p>
+                    <p class="fs-title">{{'atencionDe' | translate}}<br>{{'embarazadas' | translate}}</p>
                     <p class="card-text text-fs-card">{{ infoContent.has_pregnant_service?'SÍ':'NO' }}</p>
                   </div>
                 </div>
@@ -124,7 +123,7 @@
               <div class="col service-col">
                 <div class="card mb-4 service-info-card">
                   <div style="text-align: center;">
-                    <p class="fs-title">DETECCIÓN DE<br>ITS</p>
+                    <p class="fs-title">{{'deteccionDe' | translate}}<br>{{'its' | translate}}</p>
                     <p class="card-text text-fs-card">{{ infoContent.has_its_service?'SÍ':'NO' }}</p>
                   </div>
                 </div>
@@ -132,7 +131,7 @@
               <div class="col service-col">
                 <div class="card mb-4 service-info-card">
                   <div style="text-align: center;">
-                    <p class="fs-title">OTRA</p>
+                    <p class="fs-title">{{'otra' | translate}}</p>
                     <p class="card-text text-fs-card" style="margin-top: 36px;">{{ infoContent.others?'SÍ':'NO' }}</p>
                   </div>
                 </div>
@@ -140,7 +139,7 @@
             </div>
             <div class="row" style="display: none;">
               <div class="col-7">
-                <p style="font-size: small;">LA INFORMACIÓN Y/O ATENCIÓN QUE EL CENTRO TE BRINDÓ FUE:</p>
+                <p style="font-size: small;">{{'informacionBrindada' | translate}}</p>
               </div>
               <div class="col-5">
                 <div class="row">
@@ -162,13 +161,13 @@
 
 <ng-template #opinionRate>
   <div class="modal-header">
-    <h4 class="modal-title">¡Gracias por compartirnos tu opinión!</h4>
+    <h4 class="modal-title">{{'compartirOpinion' | translate}}</h4>
     <button type="button" class="close" aria-label="Close" (click)="close()">
       <span aria-hidden="true">&times;</span>
     </button>
   </div>
   <div class="modal-body">
-    <p>Para nosotros son muy importantes tus comentarios ya que nos ayudan a mejorar</p>
+    <p>{{'ayudanMejorar' | translate}}</p>
   </div>
   <div class="modal-footer">
     <button type="button" class="btn btn-outline-dark" (click)="close()">Close</button>
